<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:minWidth="300dp"
    android:minHeight="300dp" >

    <NumberPicker
        android:id="@+id/numberPicker1"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:descendantFocusability="blocksDescendants" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/numberPicker1"
        android:layout_alignBottom="@+id/numberPicker1"
        android:text="@string/set_value" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/numberPicker1"
        android:layout_alignBottom="@+id/numberPicker1"
        android:text="@string/dialog_cancel" />

    <Button
        android:id="@+id/increaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="75dp"
        android:width="75dp"
        android:layout_alignStart="@+id/cancelButton"
        android:layout_above="@+id/cancelButton"
        android:textSize="40sp"
        android:text="@string/symbol_plus" />

    <Button
        android:id="@+id/decreaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="75dp"
        android:width="75dp"
        android:layout_alignEnd="@+id/setButton"
        android:layout_above="@+id/setButton"
        android:textSize="40sp"
        android:text="@string/symbol_minus" />

</RelativeLayout>